--- a/index.html
+++ b/index.html
@@ -15,49 +15,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/aos.css">
     <style>
-        .cont {
-            background-color: #2A0944;
-        }
 
-        .form-popup h2 {
-            color: #FEC260;
-        }
-
-        .form-popup button {
-            background: linear-gradient(45deg, #a8e063, #56ab2f, #a8e063);
-            background-size: 200% 200%;
-            animation: gradientAnimation 3s ease infinite;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        @keyframes gradientAnimation {
-            0% {
-                background-position: 0% 50%;
-            }
-
-            50% {
-                background-position: 100% 50%;
-            }
-
-            100% {
-                background-position: 0% 50%;
-            }
-        }
-
-        .whatsapp-icon {
-            position: fixed;
-            bottom: 20px;
-            left: 20px;
-            cursor: pointer;
-        }
-
-        .whatsapp-icon i {
-            color: #25D366;
-        }
     </style>
 </head>
 
@@ -140,7 +98,7 @@
                             <div class="icon mb-3">
                                 <i class="fas fa-car fa-3x" style="color:#FEC260;" aria-label="Ícone de Financiamento de Veículos"></i>
                             </div>
-                            <h5 class="card-title" style="color: #4CAF50;">Financiamento de Veículos</h5>
+                            <h5 class="card-title" ">Financiamento de Veículos</h5>
                             <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Financiamento%20de%20ve%C3%ADculo" class="btn-custom">Saiba Mais</a>
                         </div>
                     </div>
@@ -151,7 +109,7 @@
                             <div class="icon mb-3">
                                 <i class="fas fa-piggy-bank fa-3x" style="color:#FEC260;" aria-label="Ícone de Empréstimo com Garantia do FGTS"></i>
                             </div>
-                            <h5 class="card-title" style="color: #4CAF50;">Empréstimo com Garantia do FGTS</h5>
+                            <h5 class="card-title" ">Empréstimo com Garantia do FGTS</h5>
                             <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Empr%C3%A9stimo%20com%20Garantia%20do%20FGTS" class="btn-custom">Saiba Mais</a>
                         </div>
                     </div>
@@ -162,7 +120,7 @@
                             <div class="icon mb-3">
                                 <i class="fas fa-hand-holding-usd fa-3x" style="color:#FEC260;" aria-label="Ícone de Empréstimo Consignado INSS"></i>
                             </div>
-                            <h5 class="card-title" style="color: #4CAF50;">Empréstimo Consignado INSS</h5>
+                            <h5 class="card-title" ">Empréstimo Consignado INSS</h5>
                             <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Empr%C3%A9stimo%20Consignado%20INSS" class="btn-custom">Saiba Mais</a>
                         </div>
                     </div>
@@ -173,7 +131,7 @@
                             <div class="icon mb-3">
                                 <i class="fas fa-university fa-3x" style="color:#FEC260;" aria-label="Ícone de Empréstimo para Servidores Públicos"></i>
                             </div>
-                            <h5 class="card-title" style="color: #4CAF50;">Empréstimo para Servidores Públicos</h5>
+                            <h5 class="card-title" ">Empréstimo para Servidores Públicos</h5>
                             <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Empr%C3%A9stimo%20para%20Servidores%20P%C3%BAblicos" class="btn-custom">Saiba Mais</a>
                         </div>
                     </div>
@@ -260,7 +218,7 @@
                                 <i style="color:#FEC260;" class="fas fa-university fa-3x" aria-label="Ícone de Ponto do INSS"></i>
                             </div>
                             <h5 class="card-title">Ponto do INSS</h5>
-                            <p class="card-text">Saia da fila do INSS, seus requerimentos são proridade para nós!</p>
+                            <p class="card-text">Evite filas, seus requerimentos do INSS são nossa prioridade!</p>
                             <button class="btn btn-primary" onclick="contactUs('Ponto do INSS')">Fale Conosco</button>
                         </div>
                     </div>
@@ -284,7 +242,7 @@
                                 <i style="color:#FEC260;" class="fas fa-coins fa-3x" aria-label="Ícone de Refinanciamento de dívidas"></i>
                             </div>
                             <h5 class="card-title">Refinanciamento de dívidas</h5>
-                            <p class="card-text">Oferecemos um plano personalizado para organizar suas finanças.</p>
+                            <p class="card-text">Plano personalizado para organizar suas finanças.</p>
                             <button class="btn btn-primary" onclick="contactUs('Refinanciamento de dívidas')">Fale Conosco</button>
                         </div>
                     </div>
@@ -389,16 +347,14 @@
                     <div class="row">
                         <div class="col-md-6 mb-4">
                             <div class="icon-box" data-aos="fade-top">
-                                <i class="bi bi-eye" aria-label="Ícone de Visão"></i>
                                 <h4>Nossa Visão</h4>
-                                <p>Ser referência de qualidade e eficiência na intermediação de crédito
+                                <p>Referência de eficiência na intermediação de crédito
                                     consignado.</p>
                             </div>
                         </div>
                         <div class="col-md-6 mb-4">
                             <div class="icon-box" data-aos="fade-top">
-                                <i class="bi bi-emoji-smile" aria-label="Ícone de Valores"></i>
-                                <h4>Uma empresa de valores</h4>
+                                <h4>Empresa de valores</h4>
                                 <p>Ética, respeito, proatividade, honestidade, qualidade e eficiência.</p>
                             </div>
                         </div>
@@ -406,15 +362,13 @@
                     <div class="row">
                         <div class="col-md-6 mb-4">
                             <div class="icon-box" data-aos="fade-top">
-                                <i class="bi bi-star" aria-label="Ícone de Atendimento Vip"></i>
                                 <h4>Atendimento Vip</h4>
                                 <p>Temos uma equipe de consultores financeiros especializados.</p>
                             </div>
                         </div>
                         <div class="col-md-6 mb-4">
                             <div class="icon-box" data-aos="fade-top">
-                                <i class="bi bi-bar-chart" aria-label="Ícone de Melhores Taxas"></i>
-                                <h4>As melhores taxas do mercado</h4>
+                                <h4>Melhores taxas do mercado</h4>
                                 <p>Condições e prazos flexíveis encaixados no seu orçamento.</p>
                             </div>
                         </div>
@@ -430,27 +384,27 @@
             <div class="row align-items-center">
                 <!-- Text Section -->
                 <div class="col-md-6">
-                    <h1 class="display-4 fw-bold">Escolha entre <br>empréstimo, saque do FGTS ou INSS.</h1>
-                    <p class="lead">Ajuda Cidadão é a maior buscador de Empréstimo Pessoal, Consignado, Consórcio e Refinanciamento!</p>
-                    <h3>O que você procura?</h3>
+                    <h1 class="display-4 fw-bold" data-aos="fade-down">Escolha entre <br>empréstimo, saque do FGTS ou INSS.</h1>
+                    <p class="lead" data-aos="fade-top">Ajuda Cidadão é a maior buscador de Empréstimo Pessoal, Consignado, Consórcio e Refinanciamento!</p>
+                    <h3 data-aos="fade-right">O que você procura?</h3>
                     <!-- Button Grid with Icons -->
                     <div class="row gy-3">
-                        <div class="col-6">
+                        <div class="col-6" data-aos="fade-right">
                             <a href="https://wa.me/5513996679977?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20Empréstimo%20INSS" class="btn btn-outline-light w-100">
                                 <i class="fas fa-file-invoice-dollar" aria-label="Ícone de Empréstimo INSS"></i> Empréstimo INSS
                             </a>
                         </div>
-                        <div class="col-6">
+                        <div class="col-6" data-aos="fade-left">
                             <a href="https://wa.me/5513996679977?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20Saque%20Aniversário" class="btn btn-outline-light w-100">
                                 <i class="fas fa-bolt" aria-label="Ícone de Saque Aniversário"></i> Saque Aniversário
                             </a>
                         </div>
-                        <div class="col-6">
+                        <div class="col-6" data-aos="fade-right">
                             <a href="https://wa.me/5513996679977?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20Crédito%20Conta%20de%20Luz" class="btn btn-outline-light w-100">
                                 <i class="fas fa-lightbulb" aria-label="Ícone de Crédito Conta de Luz"></i> Crédito Conta de Luz
                             </a>
                         </div>
-                        <div class="col-6">
+                        <div class="col-6" data-aos="fade-left">
                             <a href="https://wa.me/5513996679977?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20Ponto%20INSS%20Digital" class="btn btn-outline-light w-100">
                                 <i class="fas fa-hand-holding-usd" aria-label="Ícone de Ponto INSS Digital"></i> Ponto INSS Digital
                             </a>
