--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                                 <i class="fas fa-file-invoice-dollar" aria-label="Ícone de Empréstimo INSS"></i> Empréstimo INSS
                             </a>
                         </div>
-                        <div class="col-6" data-aos="fade-left">
+                        <div class="col-6" data-aos="fade-top">
                             <a href="https://wa.me/5513996679977?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20Saque%20Aniversário" class="btn btn-outline-light w-100">
                                 <i class="fas fa-bolt" aria-label="Ícone de Saque Aniversário"></i> Saque Aniversário
                             </a>
@@ -404,7 +404,7 @@
                                 <i class="fas fa-lightbulb" aria-label="Ícone de Crédito Conta de Luz"></i> Crédito Conta de Luz
                             </a>
                         </div>
-                        <div class="col-6" data-aos="fade-left">
+                        <div class="col-6" data-aos="fade-top">
                             <a href="https://wa.me/5513996679977?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20Ponto%20INSS%20Digital" class="btn btn-outline-light w-100">
                                 <i class="fas fa-hand-holding-usd" aria-label="Ícone de Ponto INSS Digital"></i> Ponto INSS Digital
                             </a>
@@ -534,6 +534,7 @@
     <script src="assets/js/aos.js"></script>
     <script src="assets/js/poppup.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/securaty.js"></script>
     <script>
         AOS.init({
             duration: 2000,
