--- a/pages/politica.html
+++ b/pages/politica.html
@@ -188,6 +188,7 @@
     <script src="../assets/js/form.js"></script>
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/js/aos.js"></script>
+    <script src="../assets/js/securaty.js"></script>
     <script>
         AOS.init({
             duration: 2000,
