--- a/pages/landing-page.html
+++ b/pages/landing-page.html
@@ -46,30 +46,34 @@
         </div>
     </nav>
 
-    <div class="container" style="padding-top: 100px;">
+    <div class="container saldo-container">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <div class="card shadow-lg">
+                <div class="card saldo-card shadow-lg">
                     <div class="card-body">
-                        <h2 class="text-center mb-4">Verifique seu Saldo</h2>
+                        <h2 class="text-center mb-4 saldo-title">Verifique seu Saldo</h2>
                         <form id="saldoForm">
                             <!-- Primeira Interação: Informar o saldo -->
                             <div class="mb-3">
-                                <label for="saldo" class="form-label">Informe seu saldo:</label>
-                                <input type="text" class="form-control" id="saldo" placeholder="Digite seu saldo" required oninput="this.value = this.value.replace(/[^0-9]/g, '')">
+                                <label for="saldo" class="form-label saldo-label">Informe seu saldo:</label>
+                                <input type="text" class="form-control saldo-input" id="saldo" placeholder="Digite seu saldo" required oninput="this.value = this.value.replace(/[^0-9]/g, '')">
                             </div>
                             <!-- Segunda Interação: Enviar o CPF -->
                             <div class="mb-3">
-                                <label for="cpf" class="form-label">Informe seu CPF:</label>
-                                <input type="text" class="form-control" id="cpf" placeholder="Digite seu CPF" maxlength="11" required oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 11)">
+                                <label for="cpf" class="form-label saldo-label">Informe seu CPF:</label>
+                                <input type="text" class="form-control saldo-input" id="cpf" placeholder="Digite seu CPF" maxlength="11" required oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 11)">
                             </div>
-                            <button type="button" class="btn btn-primary w-100" onclick="verificarSaldo()">Verificar Saldo</button>
+                            <button type="button" class="btn btn-primary w-100 saldo-button" onclick="verificarSaldo()">Verificar Saldo</button>
                         </form>
 
                         <!-- Terceira Interação: Retorno de um saldo fantasia e botão contratar agora -->
                         <div id="resultadoSaldo" class="text-center mt-4" style="display: none;">
-                            <h3>Seu saldo disponível é: R$ <span id="saldoFantasia">0,00</span></h3>
-                            <button class="btn btn-success mt-3" onclick="contratarAgora()">Contratar Agora</button>
+                            <h3 class="saldo-resultado">Seu saldo disponível é: R$ <span id="saldoFantasia">0,00</span></h3>
+                            <button class="btn btn-success mt-3 contratar-button" onclick="contratarAgora()">Contratar Agora</button>
+                        </div>
+                        <!-- Mensagem de erro -->
+                        <div id="erroSaldo" class="text-center mt-4 text-danger" style="display: none;">
+                            <p>Por favor, informe um saldo válido.</p>
                         </div>
                     </div>
                 </div>
@@ -77,12 +81,75 @@
         </div>
     </div>
 
+    <style>
+        .saldo-container {
+            padding-top: 100px;
+        }
+
+        .saldo-card {
+            background-color: #FFFFFF;
+            border: 2px solid #3FA796;
+            border-radius: 10px;
+        }
+
+        .saldo-title {
+            color: #2A0944;
+        }
+
+        .saldo-label {
+            color: #2A0944;
+        }
+
+        .saldo-input {
+            border: 1px solid #3FA796;
+            border-radius: 5px;
+        }
+
+        .saldo-button {
+            background-color: #3FA796;
+            color: #FFFFFF;
+            border: none;
+            border-radius: 5px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        .saldo-button:hover {
+            background-color: #2A0944;
+            color: #FEC260;
+        }
+
+        .saldo-resultado {
+            color: #2A0944;
+        }
+
+        .contratar-button {
+            background-color: #FEC260;
+            color: #2A0944;
+            border: none;
+            border-radius: 5px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        .contratar-button:hover {
+            background-color: #2A0944;
+            color: #FEC260;
+        }
+    </style>
+
     <script>
         function verificarSaldo() {
-            // Simulação de retorno de saldo fantasia
-            const saldoFantasia = (Math.random() * 10000).toFixed(2);
-            document.getElementById('saldoFantasia').innerText = saldoFantasia;
-            document.getElementById('resultadoSaldo').style.display = 'block';
+            const saldo = document.getElementById('saldo').value;
+            const cpf = document.getElementById('cpf').value;
+            if (saldo && cpf.length === 11) {
+                // Simulação de retorno de saldo fantasia baseado no saldo informado
+                const saldoFantasia = (parseFloat(saldo) * (1 + Math.random() * 0.2)).toFixed(2);
+                document.getElementById('saldoFantasia').innerText = saldoFantasia;
+                document.getElementById('resultadoSaldo').style.display = 'block';
+                document.getElementById('erroSaldo').style.display = 'none';
+            } else {
+                document.getElementById('resultadoSaldo').style.display = 'none';
+                document.getElementById('erroSaldo').style.display = 'block';
+            }
         }
 
         function contratarAgora() {
@@ -97,5 +164,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/securaty.js"></script>
 </body>
 </html>
