--- a/index.html
+++ b/index.html
@@ -71,46 +71,50 @@
         </section>
         <div class="container mt-5">
             <div class="row">
+                <!-- Card de Financiamento de Veículos -->
                 <div class="col-md-6 col-lg-3 mb-4">
                     <div class="card text-center shadow-sm h-100">
                         <div class="card-body">
                             <div class="icon mb-3">
                                 <i class="fas fa-car fa-3x" style="color:#FEC260;" aria-label="Ícone de Financiamento de Veículos"></i>
                             </div>
-                            <h5 class="card-title" ">Financiamento de Veículos</h5>
+                            <h5 class="card-title">Financiamento de Veículos</h5>
                             <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Financiamento%20de%20ve%C3%ADculo" class="btn-custom">Saiba Mais</a>
                         </div>
                     </div>
                 </div>
+                <!-- Card de Empréstimo com Garantia do FGTS -->
                 <div class="col-md-6 col-lg-3 mb-4">
                     <div class="card text-center shadow-sm h-100">
                         <div class="card-body">
                             <div class="icon mb-3">
                                 <i class="fas fa-piggy-bank fa-3x" style="color:#FEC260;" aria-label="Ícone de Empréstimo com Garantia do FGTS"></i>
                             </div>
-                            <h5 class="card-title" ">Empréstimo com Garantia do FGTS</h5>
+                            <h5 class="card-title">Empréstimo com Garantia do FGTS</h5>
                             <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Empr%C3%A9stimo%20com%20Garantia%20do%20FGTS" class="btn-custom">Saiba Mais</a>
                         </div>
                     </div>
                 </div>
+                <!-- Card de Empréstimo Consignado INSS -->
                 <div class="col-md-6 col-lg-3 mb-4">
                     <div class="card text-center shadow-sm h-100">
                         <div class="card-body">
                             <div class="icon mb-3">
                                 <i class="fas fa-hand-holding-usd fa-3x" style="color:#FEC260;" aria-label="Ícone de Empréstimo Consignado INSS"></i>
                             </div>
-                            <h5 class="card-title" ">Empréstimo Consignado INSS</h5>
+                            <h5 class="card-title">Empréstimo Consignado INSS</h5>
                             <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Empr%C3%A9stimo%20Consignado%20INSS" class="btn-custom">Saiba Mais</a>
                         </div>
                     </div>
                 </div>
+                <!-- Card de Empréstimo para Servidores Públicos -->
                 <div class="col-md-6 col-lg-3 mb-4">
                     <div class="card text-center shadow-sm h-100">
                         <div class="card-body">
                             <div class="icon mb-3">
                                 <i class="fas fa-university fa-3x" style="color:#FEC260;" aria-label="Ícone de Empréstimo para Servidores Públicos"></i>
                             </div>
-                            <h5 class="card-title" ">Empréstimo para Servidores Públicos</h5>
+                            <h5 class="card-title">Empréstimo para Servidores Públicos</h5>
                             <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Empr%C3%A9stimo%20para%20Servidores%20P%C3%BAblicos" class="btn-custom">Saiba Mais</a>
                         </div>
                     </div>
@@ -147,7 +151,6 @@
             <button type="button" class="close-btn" onclick="fecharFormulario()">Fechar</button>
         </form>
     </div>
-    </section>
     <!-- Serviços -->
     <section id="servicos" class="py-5">
         <div class="container text-center">
@@ -327,8 +330,7 @@
                         <div class="col-md-6 mb-4">
                             <div class="icon-box" data-aos="fade-top">
                                 <h4>Nossa Visão</h4>
-                                <p>Referência de eficiência na intermediação de crédito
-                                    consignado.</p>
+                                <p>Referência de eficiência na intermediação de crédito consignado.</p>
                             </div>
                         </div>
                         <div class="col-md-6 mb-4">
@@ -355,6 +357,40 @@
                 </div>
             </div>
         </div>
+    </section>
+    <!-- Carousel -->
+    <section id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="assets/img/images/foto1.webp" class="d-block w-100" style="height: 550px; object-fit: cover;" alt="Imagem Placeholder 1">
+                <div class="carousel-caption d-none d-md-block" style="top: 50px; bottom: auto; color: #b8860b; text-align: left; left: 10%;">
+                    <h5 style="font-size: 2.5rem;">Atendimento Online</h5>
+                    <p style="font-size: 2rem;">Saia das filas!</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="assets/img/images/foto2.webp" class="d-block w-100" style="height: 550px; object-fit: cover;" alt="Imagem Placeholder 2">
+                <div class="carousel-caption d-none d-md-block" style="top: 50%; transform: translateY(-50%); color: #b8860b; backdrop-filter: blur(3px);">
+                    <h5 style="font-size: 2rem;">Equipe Especializada</h5>
+                    <p style="font-size: 1.5rem;">Temos uma equipe de consultores financeiros especializados.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="assets/img/images/foto3.jpg" class="d-block w-100" style="height: 550px; object-fit: cover;" alt="Imagem Placeholder 3">
+                <div class="carousel-caption d-none d-md-block" style="top: 0; bottom: auto; color: #b8860b; text-align: center; width: 100%;">
+                    <h5 style="font-size: 2rem;">Disponibilidade</h5>
+                    <p style="font-size: 1.5rem;">Estamos disponíveis 24hs por dia.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Próximo</span>
+        </button>
     </section>
     <br>
     <!-- Hero Section -->
@@ -476,6 +512,7 @@
         </div>
     </footer>
 
+    <!-- Popup de Chat -->
     <div id="popupChat" class="chat-popup d-none">
         <div class="chat-header">
             <img src="assets/img/images/leo.png" alt="Imagem de Leonardo" class="chat-img">
@@ -517,7 +554,6 @@
     <script src="assets/js/poppup.js"></script>
     <script src="assets/js/darkmode.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/securaty.js"></script>
     <script>
         AOS.init({
             duration: 2000,
