--- a/index.html
+++ b/index.html
@@ -359,27 +359,27 @@
         </div>
     </section>
     <!-- Carousel -->
-    <section id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <section id="carouselExampleCaptions" class="carousel slide d-none d-md-block" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="assets/img/images/foto1.webp" class="d-block w-100" style="height: 550px; object-fit: cover;" alt="Imagem Placeholder 1">
                 <div class="carousel-caption d-none d-md-block" style="top: 50px; bottom: auto; color: #b8860b; text-align: left; left: 10%;">
-                    <h5 style="font-size: 2.5rem;">Atendimento Online</h5>
-                    <p style="font-size: 2rem;">Saia das filas!</p>
+                    <h5  class="display-4" data-aos="fade-right">Atendimento Online</h5>
+                    <p class="lead" data-aos="fade-right">Saia das filas!</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="assets/img/images/foto2.webp" class="d-block w-100" style="height: 550px; object-fit: cover;" alt="Imagem Placeholder 2">
                 <div class="carousel-caption d-none d-md-block" style="top: 50%; transform: translateY(-50%); color: #b8860b; backdrop-filter: blur(3px);">
-                    <h5 style="font-size: 2rem;">Equipe Especializada</h5>
-                    <p style="font-size: 1.5rem;">Temos uma equipe de consultores financeiros especializados.</p>
+                    <h5 class="display-4" data-aos="fade-right">Equipe Especializada</h5>
+                    <p class="lead" data-aos="fade-right">Temos uma equipe de consultores financeiros especializados.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="assets/img/images/foto3.jpg" class="d-block w-100" style="height: 550px; object-fit: cover;" alt="Imagem Placeholder 3">
                 <div class="carousel-caption d-none d-md-block" style="top: 0; bottom: auto; color: #b8860b; text-align: center; width: 100%;">
-                    <h5 style="font-size: 2rem;">Disponibilidade</h5>
-                    <p style="font-size: 1.5rem;">Estamos disponíveis 24hs por dia.</p>
+                    <h5 class="display-4" data-aos="fade-right">Disponibilidade</h5>
+                    <p class="lead" data-aos="fade-right">Estamos disponíveis 24hs por dia.</p>
                 </div>
             </div>
         </div>
