--- a/index.html
+++ b/index.html
@@ -370,14 +370,14 @@
             </div>
             <div class="carousel-item">
                 <img src="assets/img/images/foto2.webp" class="d-block w-100" style="height: 550px; object-fit: cover;" alt="Imagem Placeholder 2">
-                <div class="carousel-caption d-none d-md-block" style="top: 50%; transform: translateY(-50%); color: #b8860b; backdrop-filter: blur(3px);">
+                <div class="carousel-caption d-none d-md-block" style="top: 50%; transform: translateY(-50%); color: #3FA796; backdrop-filter: blur(3px);">
                     <h5 class="display-4" data-aos="fade-right">Equipe Especializada</h5>
                     <p class="lead" data-aos="fade-right">Temos uma equipe de consultores financeiros especializados.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="assets/img/images/foto3.jpg" class="d-block w-100" style="height: 550px; object-fit: cover;" alt="Imagem Placeholder 3">
-                <div class="carousel-caption d-none d-md-block" style="top: 0; bottom: auto; color: #b8860b; text-align: center; width: 100%;">
+                <div class="carousel-caption d-none d-md-block" style="top: 0; bottom: auto; color: #2A0944; text-align: center; width: 100%;">
                     <h5 class="display-4" data-aos="fade-right">Disponibilidade</h5>
                     <p class="lead" data-aos="fade-right">Estamos disponíveis 24hs por dia.</p>
                 </div>
@@ -554,6 +554,7 @@
     <script src="assets/js/poppup.js"></script>
     <script src="assets/js/darkmode.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/securaty.js"></script>
     <script>
         AOS.init({
             duration: 2000,
